feat: add desc license

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -2,6 +2,8 @@
 name = "png-secret"
 version = "0.1.0"
 edition = "2021"
+license = "MIT"
+description = "A simple steganography tool for PNG images"
 
 [dependencies]
 anyhow = "1.0"
